--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     "https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
   </script>
  </head>
- <body>
+ <body >
  <script>
 $(function(){
   var i = 0;
   $.getJSON("/doctorlist",function(obj){
-    document.write('<center><h2 >Name of the Doctors</h2></center>');
-    document.write('<center><p>(click on the Name to see their details)<p></center>');
+    document.write('<center><h1 style="color:blue;">Name of the Doctors</h1></center>');
+    document.write('<center><p style="color:red;">(click on the Name to see their details)<p></center>');
     for(var i=0;i<obj.doctorlist.length;i++)
-    {  document.write('<center><p onclick="someFunction(\'' + obj.doctorlist[i].field +'|'+ obj.doctorlist[i]._id + '\')" >' + obj.doctorlist[i].name + '</p></center>');
+    {  document.write('<center><h3 onclick="someFunction(\'' + obj.doctorlist[i].field +'|'+ obj.doctorlist[i]._id + '\')" >' + obj.doctorlist[i].name + '</h3></center>');
 
   }
 })});
